# Arkanoid

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Configurations/: GameConfigurationsCleaner.cpp  GameConfigurationsCleaner.hpp  GameConfigurator.cpp  GameConfigurator.hpp
Data/: BricksRepository.cpp  BricksRepository.hpp
Drawing/: ShapesDrawer.hpp
Game/: Game.cpp  Game.hpp  GameConfigurationsCleaner.cpp  GameConfigurationsCleaner.hpp  GameConfigurator.cpp  GameConfigurator.hpp
GameLogic/: CollisionHandler.cpp  CollisionHandler.hpp  GameLoopManager.cpp  GameLoopManager.hpp  GameResult.hpp  GameResultManager.cpp  GameResultManager.hpp  LevelManager.cpp  LevelManager.hpp
Graphics/: GraphicsRenderer.cpp  GraphicsRenderer.hpp  ShapesDrawer.cpp  ShapesDrawer.hpp  TextRenderer.cpp  TextRenderer.hpp
Objects/: Ball.cpp  Ball.hpp  Brick.cpp  Brick.hpp  Paddle.cpp  Paddle.hpp
PlayerInteraction/: GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  GraphicalPlayerInteraction.cpp  GraphicalPlayerInteraction.hpp
Shapes/: Brick.cpp  ShapesDrawer.cpp  ShapesDrawer.hpp
